Fix gallery title not wrapping when close to flex end

--- a/static/base.css
+++ b/static/base.css
@@ -224,6 +224,7 @@ footer > p > a {
 
   .gallery-title h2 {
     font-size: 1rem;
+    padding-right: 1em;
   }
 
 }
